make home page responsive   - add burger menu for navbar on mobile screens   - fix navbar buttons not switching properly on logout   - fix footer

--- a/src/components/stylesheets/home.scss
+++ b/src/components/stylesheets/home.scss
@@ -15,9 +15,11 @@
 }
 
 #home {
-  height: 100%;
+  //height: calc(100vh - 4.375rem);
+  max-height: calc(100vh - 4.375rem);
   padding-top: px-to-rem(20px);
   #head-section {
+    max-height: 70vh;
     padding-bottom: px-to-rem(30px);
     #headers {
       display: flex;
@@ -47,10 +49,13 @@
 
     .button-set {
       padding-top: px-to-rem(50px);
-      width: 40%;
-      margin: auto;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      width: 100%;
       a {
         color: #FFFFFF;
+        text-decoration: none;
         &:hover, &:visited {
           color: #FFFFFF;
         }
@@ -72,29 +77,247 @@
         @include home-buttons;
       }
 
-      @include bp(bp-phones) {
-        width: 50%;
-        margin: auto;
-        padding-top: px-to-rem(20px);
-      }
-      @include bp(bp-phones-small) {
-        width: 60%;
-        margin: auto;
-        padding-top: px-to-rem(5px);
-      }
-      @include bp(bp-tablet) {
-        width: 70%;
-        //margin: auto;
-      }
-      @include bp(bp-tablet-big) {
-        width: 50%;
-        margin: auto;
-      }
+      //@include bp(bp-phones) {
+      //  width: 50%;
+      //  margin: auto;
+      //  padding-top: px-to-rem(20px);
+      //}
+      //@include bp(bp-phones-small) {
+      //  width: 60%;
+      //  margin: auto;
+      //  padding-top: px-to-rem(5px);
+      //}
+      //@include bp(bp-tablet) {
+      //  width: 70%;
+      //  //margin: auto;
+      //}
+      //@include bp(bp-tablet-big) {
+      //  width: 50%;
+      //  margin: auto;
+      //}
     }
   }
   #image-div {
     #managed-image {
       width: 100%;
+      height: 30vh;
+    }
+  }
+}
+
+
+@include bp(bp-phones) {
+  #home {
+    #head-section {
+      #headers {
+        #site-header {
+          font-size: px-to-rem(35px);
+        }
+
+        #site-description {
+          padding: 0 px-to-rem(10px);
+          font-size: px-to-rem(16px);
+        }
+      }
+      .button-set {
+        width: 100%;
+        #create {
+          @include home-buttons;
+          font-size: px-to-rem(14px);
+          height: px-to-rem(50px);
+          font-weight: bolder;
+        }
+
+        #view {
+          @include home-buttons;
+          font-size: px-to-rem(14px);
+          height: px-to-rem(50px);
+          font-weight: bolder;
+        }
+      }
+    }
+    #image-div {
+      padding-top: px-to-rem(30px);
+      #managed-image {
+        height: 20vh;
+      }
+    }
+  }
+}
+
+@include bp(bp-phones-small) {
+  #home {
+    #head-section {
+      #headers {
+        padding: 0 px-to-rem(10px);
+        #site-header {
+          font-size: px-to-rem(25px);
+        }
+        #site-description {
+          font-size: px-to-rem(15px);
+        }
+      }
+
+      .button-set {
+        width: 100%;
+        #create {
+          @include home-buttons;
+          font-size: px-to-rem(12px);
+          height: px-to-rem(30px);
+          font-weight: bolder;
+          padding: px-to-rem(5px) px-to-rem(5px);
+          width: 50%;
+        }
+        #view {
+          @include home-buttons;
+          font-size: px-to-rem(12px);
+          height: px-to-rem(30px);
+          font-weight: bolder;
+          padding: px-to-rem(5px) px-to-rem(5px);
+          width: 50%;
+        }
+      }
+    }
+
+    #image-div {
+      #managed-image {
+        height: 20vh;
+      }
+    }
+  }
+}
+
+@include bp(bp-phones-600-height) {
+  #home {
+    #head-section {
+      #headers {
+        #site-header {
+          font-size: px-to-rem(30px);
+        }
+        #site-description {
+          font-size: 0.9rem;
+        }
+      }
+      .button-set {
+        width: 100%;
+        #create {
+          @include home-buttons;
+          font-size: px-to-rem(12px);
+          height: px-to-rem(40px);
+          font-weight: bolder;
+        }
+
+        #view {
+          @include home-buttons;
+          font-size: px-to-rem(12px);
+          height: px-to-rem(40px);
+          font-weight: bolder;
+        }
+      }
+    }
+    #image-div {
+      #managed-image {
+        height: 20vh;
+      }
+    }
+  }
+}
+
+@include bp(bp-phones-800-height) {
+  #home {
+    #head-section {
+      #headers {
+        #site-header {
+          font-size: px-to-rem(35px);
+        }
+        #site-description {
+          font-size: px-to-rem(19px);
+          padding: 0 px-to-rem(10px);
+        }
+      }
+      .button-set {
+        width: 100%;
+        #create {
+          @include home-buttons;
+          width: 50%;
+          font-size: px-to-rem(12px);
+          height: px-to-rem(50px);
+          font-weight: 900;
+        }
+
+        #view {
+          @include home-buttons;
+          width: 50%;
+          font-size: px-to-rem(12px);
+          height: px-to-rem(50px);
+          font-weight: 900;
+        }
+      }
+    }
+
+    #image-div {
+      padding-top: px-to-rem(70px);
+      #managed-image {
+        height: 20vh;
+      }
+    }
+  }
+}
+
+@include bp(bp-tablet) {
+  #home {
+    #head-section {
+      .button-set {
+        width: 100%;
+        #create {
+          @include home-buttons;
+          width: 45%;
+          font-size: px-to-rem(20px);
+          height: px-to-rem(80px);
+          font-weight: bolder;
+          padding: 0 px-to-rem(10px);
+        }
+
+        #view {
+          @include home-buttons;
+          width: 45%;
+          font-size: px-to-rem(20px);
+          height: px-to-rem(80px);
+          font-weight: bolder;
+          padding: 0 px-to-rem(10px);
+        }
+      }
+    }
+    #image-div {
+      padding-top: px-to-rem(100px);
+    }
+  }
+}
+
+@include bp(bp-tablet-big) {
+  #home {
+    #head-section {
+      .button-set {
+        width: 100%;
+        #create {
+          @include home-buttons;
+          width: 35%;
+          font-size: px-to-rem(25px);
+          height: px-to-rem(80px);
+          font-weight: bolder;
+        }
+
+        #view {
+          @include home-buttons;
+          width: 35%;
+          font-size: px-to-rem(25px);
+          height: px-to-rem(80px);
+          font-weight: bolder;
+        }
+      }
+    }
+    #image-div {
+      padding-top: px-to-rem(150px);
     }
   }
 }
